
============================================= ATUALIZAÇÕES DOS SCRIPTS =============================================
10/07/2022 - Robson Vaamonde - Atualização do arquivo de configuração: ntp.conf adicionado os endereços IPv4 dos
servidores do NTP.br para resolver a falha do Bind9 em relação a data e hora errada e ocasionando as falhas de
resolução de nomes conforme o BUG: 0009 - Falha de resolução do DNS para endereços Externos

09/07/2022 - Robson Vaamonde - Atualização do script: 00-parametros.sh adicionado no laço de loop a dependência do
Bind9 no Webdav, atualização dos arquivos de configuração do GLPI nas versões v9.x e v10.x referente os caminhos da
instalação e numeração das versões nos scripts.

08/07/2022 - Robson Vaamonde - Atualização do script: 12-webdav.sh em relação a variável do caminho do arquivo de 
usuários do Webdav de: PATHWEBDAVDB para PATHWEBDAVUSERS, remoção do bloco duplicado de módulos de Apache2 do Webdav.

03/07/2022 - Robson Vaamonde - Atualização do script: 00-parametros.sh com a nova versão do GLPI Help Desk v9.5.8 e 
v10.0.2 e atualização da numeração das versões dos scripts de configuração do GLPI no Apache2.

05/06/2022 - Robson Vaamonde - Atualização do script: 14-webmin.sh retirado a opção de: sudo do comando de adicionar
a chave GPG, atualizado o script: 00-parametros.sh com as versões novas do GLPI 9.x e 10.x, atualização do script
18-fusioninventory.sh com o PATH da versão do GLPI 9.x, atualização do arquivos de configuração: agent.cfg indicando
o caminho HTTPS do GLPI 9.x, adicionado e corrigido as dependências do FusionInventory Task WakeOnLan: libnet-write-perl
libyaml-shell-perl.

31/05/2022 - Robson Vaamonde - Alteração dos scripts e arquivos de configuração do GLPI Help Desk, criado a estrutura
para as versões: 9.5.x e 10.0.x, alterado o nome do script 17-glpi.sh para: 17-A-glpi9.sh utilizado na versão 9.5.x,